Added test api call for JWT implementation.
